[gd_scene load_steps=2 format=2]

[ext_resource path="res://ragdoll_car.gd" type="Script" id=1]

[node name="RagdollCar" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
mass = 1300.0
linear_damp = 1.0
angular_damp = 0.9
script = ExtResource( 1 )

[node name="KinematicHitDetection" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="KinematicHitDetection" to="." method="_on_collide"]
